# genealogy-keeper

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/desktop/app/: Cargo.toml  tauri.conf.json
crates/desktop/app/src/: application.rs
crates/desktop/frontend/: Cargo.toml  index.html  index.scss
crates/desktop/frontend/src/: frontend.rs
crates/desktop/shared/: Cargo.toml
crates/desktop/shared/src/: log.rs
crates/gendat/: Cargo.toml  gendat_schema.kdl
crates/gendat/src/: date.rs  document.rs  event.rs  lib.rs  link.rs  person.rs
crates/gendat/src/person/: id.rs  name.rs  pronoun.rs
crates/tldraw/: Cargo.toml  README.md  build.rs  esbuild.js  package-lock.json  package.js  package.json  package.jsx  tldraw.jsx
crates/tldraw/src/: bindings.rs  lib.rs  package.css
crates/ui/: Cargo.toml
crates/web/: Cargo.toml  index.html  index.scss
crates/web/src/: lib.rs  web.rs
gendat/: Cargo.toml  gendat_schema.kdl
gendat/src/: person.rs
genflux-app/app/: Cargo.toml  tauri.conf.json
genflux-app/app/src/: application.rs
genflux-app/frontend/: Cargo.toml  index.html  index.scss
genflux-app/frontend/src/: frontend.rs
genflux-app/frontend/src/logging/: tauri.rs
genflux-app/shared/: Cargo.toml
genflux-app/shared/src/: log.rs
genflux-dat/: Cargo.toml  gendat_schema.kdl
genflux-dat/src/: date.rs  lib.rs
genflux-dat/src/event/: birth.rs
genflux-ui/: Cargo.toml
genflux-web/: Cargo.toml  index.scss
genflux-web/src/: web.rs
genkeeper-desktop/app/src/: application.rs
genkeeper-desktop/frontend/: Cargo.toml  index.html  index.scss
genkeeper-ui/: Cargo.toml
genkeeper-ui/styles/: index.scss
genkeeper-web/: Cargo.toml  index.html
genkeeper-web/src/: lib.rs
