[package]
name = "gendat"
description = ""
repository = "https://github.com/temportalflux/genealogy-keeper"
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2024"

[dependencies]
kdlize = { path = "../kdlize" }
kdl = { version = "6", git = "https://github.com/kdl-org/kdl-rs", features=["v1", "v1-fallback"] }
time = { version = "0.3", features = ["parsing", "formatting"]}
thiserror = "^2.0"

[dev-dependencies]
trim-margin = "0.1.0"
anyhow = "1.0"
