[package]
name = "gendat"
description = ""
repository = "https://github.com/temportalflux/genealogy-keeper"
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2024"

[dependencies]
kdlize = { path = "../kdlize" }
kdl = "^6"
log = { version = "^0.4", features = ["std", "serde"] }
time = { version = "0.3", features = ["parsing", "formatting"]}
thiserror = "^2.0"
miette = "^7.6"
lazy_static = "1.5"

[dev-dependencies]
trim-margin = "0.1.0"
anyhow = "1.0"
