[package]
name = "tldraw"
description = ""
repository = ""
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2024"

[dependencies]
wasm-bindgen = "^0.2"
yew = "^0.21"
serde = { version = "^1.0", features=["derive"] }
serde-wasm-bindgen = "^0.6"
log = { version = "0.4", features = ["std"] }

[dev-dependencies]

