[package]
name = "genkeeper-desktop-app"
description = ""
repository = "https://github.com/temportalflux/genealogy-keeper"
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2021"
default-run = "application"
rust-version = "1.60"

[[bin]]
name = "application"
path = "src/application.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared = { path = "../shared", package = "genkeeper-desktop-shared" }
gendat = { path = "../../gendat" }

anyhow = "1.0"
thiserror = "2"
once_cell = "1.19"
multimap = "0.10"
itertools = "0.14"
reqwest = "0.12"
miette = { version = "7.6", features = ["fancy"] }

futures = "0.3"
futures-util = "0.3"
tokio = { version = "^1", features = ["fs"] }

log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2"
crossbeam-channel = "0.5"
async-channel = "2.2"

tauri = { version = "2", features = [] }
tauri-plugin-positioner = { version = "2" }
tauri-plugin-log = { version = "2" }
tauri-plugin-clipboard = "2"

[dependencies.windows]
version = "0.61"
features = [
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
]
